package org.scholanova.mealdeliverapi.domain.Commande;

public enum EtatCommande {

    EN_PREPARATION,
    EN_CHEMIN,
    LIVRE
}
