package org.scholanova.mealdeliverapi.domain.Produit;

public enum TypeProduit {
    ENTREE,
    PLAT,
    DESSERT,
    BOISSON
}
