@startuml

title __Class Diagram__\n

class Client {
    - id : Long
    - adresse : String
    - prenom : String
    - ptsFidelite : int
}

class Livreur {
    - id : Long
    - prenom : String
}

class Commande {

    - couvertPlastique : boolean
    - contenu : List<Produit>
    - contenu_menu : List<Menu>
    - heureLivraison : Date
    - id : Long
    - livreur : Livreur
    - client : Client
    - restaurant : Restaurant
    - etat : EtatCommande
    + getTempsPreparationMax()
}

enum EtatCommande {
  EN_CHEMIN
  EN_PREPARATION
  LIVRE
}

Commande o-- Client : client
Commande o-- EtatCommande #line:red;line.dotted;text:red  : etat
Commande o-- Livreur : livreur
Commande o-- Restaurant : restaurant

class Restaurant {
    - adresse : String
    - id : Long
    - nom : String
}

class RestoContient {
    - id : Long
    - produit : Produit
    - restaurant : Restaurant
}


RestoContient o-- Produit : produit
RestoContient o-- Restaurant : restaurant

class Produit {
    - id : Long
    - nom : String
    - prix : Float
    - tempsPreparation : int
    - produit : TypeProduit
}


enum TypeProduit {
  BOISSON
  DESSERT
  ENTREE
  PLAT
}


Produit o-- TypeProduit #line:red;line.dotted;text:red  : type

class Menu {
    - id : Long
    - boisson : Produit
    - dessert : Produit
    - entree : Produit
    - plat : Produit
    + verifType()
}

Menu o-- Produit : boisson
Menu o-- Produit : dessert
Menu o-- Produit : entree
Menu o-- Produit : plat

right footer
PlantUML diagram generated by SketchIt!
endfooter

@enduml
